--- a/Hillal_Sserunjogi/hillal_sserunjogi_day12.ipynb
+++ b/Hillal_Sserunjogi/hillal_sserunjogi_day12.ipynb
@@ -2,37 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "age         0\n",
-       "sex         0\n",
-       "cp          0\n",
-       "trestbps    0\n",
-       "chol        0\n",
-       "fbs         0\n",
-       "restecg     0\n",
-       "thalach     0\n",
-       "exang       0\n",
-       "oldpeak     0\n",
-       "slope       0\n",
-       "ca          0\n",
-       "thal        0\n",
-       "target      0\n",
-       "dtype: int64"
+       "0      False\n",
+       "1      False\n",
+       "2      False\n",
+       "3      False\n",
+       "4      False\n",
+       "       ...  \n",
+       "298    False\n",
+       "299    False\n",
+       "300    False\n",
+       "301    False\n",
+       "302    False\n",
+       "Length: 303, dtype: bool"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,13 +170,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data training and splitting \n",
     "# Supervised learning algos"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('heart.csv')\n",
+    "\n",
+    "# Define 'X' before using it in train_test_split()\n",
+    "X = df.drop('target',axis=1)\n",
+    "y = df['target']\n",
+    "\n",
+    "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.2,random_state=1)\n",
+    "scaler = MinMaxScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The score is : 0.7377049180327869\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.metrics import confusion_matrix,accuracy_score\n",
+    "\n",
+    "knn = KNeighborsClassifier()\n",
+    "knn.fit(X_train_scaled,y_train)\n",
+    "print(f\"The score is : {knn.score(X_test_scaled,y_test)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -205,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
